[gd_scene load_steps=2 format=3 uid="uid://cotdgx257oxed"]

[ext_resource type="Script" path="res://scenes/debug/tweening/TweenDebug.gd" id="1_np3h3"]

[node name="TweenDebug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_np3h3")

[node name="Mark" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 5.0
offset_bottom = 5.0
color = Color(1, 0, 1, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 156.0
offset_bottom = 203.0
scale = Vector2(0.5, 0.5)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Trans:"

[node name="TweenTransSelector" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Ease:"

[node name="TweenEaseSelector" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
texture_filter = 1
layout_mode = 2
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Rotate:"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Time (s):"

[node name="SecondsInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "1"

[node name="PosLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="SetMarkButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Set Marker"

[node name="TweenButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tween"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SetMarkButton" to="." method="_on_set_mark_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TweenButton" to="." method="_on_tween_button_pressed"]
